--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server_Hapi.js"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "react-exercice": "file:.."
   }
 }
